# stm32l432-pac

./: Cargo.toml  README.md  stm32l4x2.svd.patched  update.sh
src/: lib.rs
src/dma1/: isr.rs
