[package]
version = "0.0.1"
authors = [
  "nickray <n@stalder.io>",
]
description = "Peripheral access API for stm32l4x2 microcontrollers"
documentation = "https://docs.rs/stm32l4x2-pac"
keywords = ["no-std", "arm", "cortex-m", "stm32", "stm32l4x2"]
license = "MIT OR Apache-2.0"
name = "stm32l4x2-pac"
repository = "https://github.com/nickray/stm32l4x2-pac"
edition = "2018"

[dependencies]
bare-metal = "0.2.4"
vcell = "0.1"
cortex-m = ">= 0.5.8, < 0.7"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.8"

[features]
rt = ["cortex-m-rt/device"]
stm32l4x1 = []
stm32l4x2 = []
stm32l4x3 = []
stm32l4x5 = []
stm32l4x6 = []
default = ["stm32l4x2"]
